--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,14 +1,9 @@
 <h1>Posts</h1>
 
-<ul>
-  <% @posts.each do |post| %>
-    <li>
-      <a href="/post/<%= post.id %>">
-        <%= post.title %>
-      </a>
-    </li>
-     <li>
-        <%= post.title %>
-    </li>
+<% @posts.each do |post| %>
+  <h2><%= post.title %></h2>
+  <% if @user != nil%>
+  <h4> <%=@user.email%></h4> 
   <% end %>
-</ul>
+  <p><%= post.title %></p>
+<% end %>
